--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "/dashboard/dashboard.html"
+    "livePreview.defaultPreviewPath": "/login/loginNew.html"
 }
